--- a/static/assets/css/libs/jquery.fancybox.css
+++ b/static/assets/css/libs/jquery.fancybox.css
@@ -117,7 +117,7 @@
   height: 100%;
   cursor: pointer;
   text-decoration: none;
-  background: transparent url("blank.gif");
+  /* background: transparent url("blank.gif"); */
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
   z-index: 8040;
 }
