--- a/static/assets/css/promo/desktop/checkout.css
+++ b/static/assets/css/promo/desktop/checkout.css
@@ -894,7 +894,7 @@ a.what {
 }
 
 .thank-bg {
-  background-image: url(../../../../promo/desktop/images/chk-bg.jpg);
+  /* background-image: url(../../../../promo/desktop/images/chk-bg.jpg); */
   background-position: center top;
   background-repeat: no-repeat;
   display: table;
