--- a/static/assets/css/promo/desktop/jquery.fancybox.css
+++ b/static/assets/css/promo/desktop/jquery.fancybox.css
@@ -79,7 +79,7 @@
 .fancybox-close,
 .fancybox-prev span,
 .fancybox-next span {
-  background-image: url("../images/fancybox_sprite.png");
+  /* background-image: url('../images/fancybox_sprite.png'); */
 }
 
 #fancybox-loading {
@@ -97,7 +97,7 @@
 #fancybox-loading div {
   width: 44px;
   height: 44px;
-  background: url("../images/fancybox_loading.gif") center center no-repeat;
+  /* background: url("../images/fancybox_loading.gif") center center no-repeat; */
 }
 
 .fancybox-close {
@@ -117,7 +117,7 @@
   height: 100%;
   cursor: pointer;
   text-decoration: none;
-  background: transparent url("blank.gif");
+  /* background: transparent url('blank.gif'); */
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
   z-index: 8040;
 }
@@ -185,7 +185,7 @@
   overflow: hidden;
   display: none;
   z-index: 8010;
-  background: url("../images/fancybox_overlay.png");
+  /* background: url('../images/fancybox_overlay.png'); */
 }
 
 .fancybox-overlay-fixed {
