--- a/static/assets/css/promo-style.css
+++ b/static/assets/css/promo-style.css
@@ -13,17 +13,6 @@
   line-height: 30px;
 }
 
-<<<<<<< HEAD
-.fv-form-pure .fv-has-success .fv-control-feedback,.fv-form-pure .fv-has-success .fv-help-block,.fv-form-pure .fv-has-success label {
-  color: #0fff48;
-}
-
-.fv-form-pure .fv-has-success .fv-control-feedback,.fv-form-pure .fv-has-success .fv-help-block,.fv-form-pure .fv-has-success input {
-  border-color: #0fff48;
-}
-
-.frm-elem-cvv.fv-has-feedback .fv-control-feedback,.frmElemts.fv-has-feedback .fv-control-feedback {
-=======
 .fv-form-pure .fv-has-success .fv-control-feedback,
 .fv-form-pure .fv-has-success .fv-help-block,
 .fv-form-pure .fv-has-success label {
@@ -38,7 +27,6 @@
 
 .frm-elem-cvv.fv-has-feedback .fv-control-feedback,
 .frmElemts.fv-has-feedback .fv-control-feedback {
->>>>>>> develop
   /*display: none !important;*/
 }
 
@@ -50,12 +38,8 @@
   right: 88px !important;
 }
 
-<<<<<<< HEAD
-.frmElemts input,.frmElemts select {
-=======
 .frmElemts input,
 .frmElemts select {
->>>>>>> develop
   margin-bottom: 3px;
 }
 
@@ -72,12 +56,8 @@
   border: 3px solid #01e478;
 }
 
-<<<<<<< HEAD
-input::-webkit-outer-spin-button,input::-webkit-inner-spin-button {
-=======
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
->>>>>>> develop
   /* display: none; <- Crashes Chrome on hover */
   -webkit-appearance: none;
   margin: 0;
@@ -89,21 +69,13 @@ input::-webkit-inner-spin-button {
   line-height: 20px;
 }
 
-<<<<<<< HEAD
-.frmElemts select[name=month],.frmElemts select[name=year] {
-=======
 .frmElemts select[name="month"],
 .frmElemts select[name="year"] {
->>>>>>> develop
   width: 60px;
   margin-right: 5px;
 }
 
-<<<<<<< HEAD
-.frmElemts select[name=year] {
-=======
 .frmElemts select[name="year"] {
->>>>>>> develop
   margin-right: 40px;
 }
 
@@ -141,11 +113,9 @@ input::-webkit-inner-spin-button {
   animation: sk-circleBounceDelay 1.2s infinite ease-in-out both;
   background-color: #ff3f3f;
   border-radius: 100%;
-<<<<<<< HEAD
-  content: '';
-=======
+
   content: "";
->>>>>>> develop
+
   display: block;
   height: 15%;
   margin: 0 auto;
@@ -181,11 +151,7 @@ input::-webkit-inner-spin-button {
 }
 
 .js-div-loading-bar .sk-circle .sk-circle4::before {
-<<<<<<< HEAD
-  animation-delay: .9s;
-=======
   animation-delay: 0.9s;
->>>>>>> develop
 }
 
 .js-div-loading-bar .sk-circle .sk-circle5 {
@@ -193,11 +159,7 @@ input::-webkit-inner-spin-button {
 }
 
 .js-div-loading-bar .sk-circle .sk-circle5::before {
-<<<<<<< HEAD
-  animation-delay: .8s;
-=======
   animation-delay: 0.8s;
->>>>>>> develop
 }
 
 .js-div-loading-bar .sk-circle .sk-circle6 {
@@ -205,11 +167,7 @@ input::-webkit-inner-spin-button {
 }
 
 .js-div-loading-bar .sk-circle .sk-circle6::before {
-<<<<<<< HEAD
-  animation-delay: .7s;
-=======
   animation-delay: 0.7s;
->>>>>>> develop
 }
 
 .js-div-loading-bar .sk-circle .sk-circle7 {
@@ -217,11 +175,7 @@ input::-webkit-inner-spin-button {
 }
 
 .js-div-loading-bar .sk-circle .sk-circle7::before {
-<<<<<<< HEAD
-  animation-delay: .6s;
-=======
   animation-delay: 0.6s;
->>>>>>> develop
 }
 
 .js-div-loading-bar .sk-circle .sk-circle8 {
@@ -229,11 +183,7 @@ input::-webkit-inner-spin-button {
 }
 
 .js-div-loading-bar .sk-circle .sk-circle8::before {
-<<<<<<< HEAD
-  animation-delay: .5s;
-=======
   animation-delay: 0.5s;
->>>>>>> develop
 }
 
 .js-div-loading-bar .sk-circle .sk-circle9 {
@@ -241,11 +191,7 @@ input::-webkit-inner-spin-button {
 }
 
 .js-div-loading-bar .sk-circle .sk-circle9::before {
-<<<<<<< HEAD
-  animation-delay: .4s;
-=======
   animation-delay: 0.4s;
->>>>>>> develop
 }
 
 .js-div-loading-bar .sk-circle .sk-circle10 {
@@ -253,11 +199,7 @@ input::-webkit-inner-spin-button {
 }
 
 .js-div-loading-bar .sk-circle .sk-circle10::before {
-<<<<<<< HEAD
-  animation-delay: .3s;
-=======
   animation-delay: 0.3s;
->>>>>>> develop
 }
 
 .js-div-loading-bar .sk-circle .sk-circle11 {
@@ -265,11 +207,7 @@ input::-webkit-inner-spin-button {
 }
 
 .js-div-loading-bar .sk-circle .sk-circle11::before {
-<<<<<<< HEAD
-  animation-delay: .2s;
-=======
   animation-delay: 0.2s;
->>>>>>> develop
 }
 
 .js-div-loading-bar .sk-circle .sk-circle12 {
@@ -277,13 +215,6 @@ input::-webkit-inner-spin-button {
 }
 
 .js-div-loading-bar .sk-circle .sk-circle12::before {
-<<<<<<< HEAD
-  animation-delay: .1s;
-}
-
-@-webkit-keyframes sk-circleBounceDelay {
-  0%, 80%, 100% {
-=======
   animation-delay: 0.1s;
 }
 
@@ -291,7 +222,6 @@ input::-webkit-inner-spin-button {
   0%,
   80%,
   100% {
->>>>>>> develop
     -webkit-transform: scale(0);
     transform: scale(0);
   }
@@ -303,13 +233,9 @@ input::-webkit-inner-spin-button {
 }
 
 @keyframes sk-circleBounceDelay {
-<<<<<<< HEAD
-  0%, 80%, 100% {
-=======
   0%,
   80%,
   100% {
->>>>>>> develop
     -webkit-transform: scale(0);
     transform: scale(0);
   }
@@ -326,15 +252,10 @@ input::-webkit-inner-spin-button {
 
 .fade {
   opacity: 0;
-<<<<<<< HEAD
-  -webkit-transition: opacity .15s linear;
-  -o-transition: opacity .15s linear;
-  transition: opacity .15s linear;
-=======
+
   -webkit-transition: opacity 0.15s linear;
   -o-transition: opacity 0.15s linear;
   transition: opacity 0.15s linear;
->>>>>>> develop
 }
 
 .fade.in {
@@ -369,24 +290,6 @@ input::-webkit-inner-spin-button {
 }
 
 .modal.fade .modal-dialog {
-<<<<<<< HEAD
-  -webkit-transition: -webkit-transform .3s ease-out;
-  transition: -webkit-transform .3s ease-out;
-  -o-transition: -o-transform .3s ease-out;
-  transition: transform .3s ease-out;
-  transition: transform .3s ease-out,-webkit-transform .3s ease-out,-o-transform .3s ease-out;
-  -webkit-transform: translate(0,-25%);
-  -ms-transform: translate(0,-25%);
-  -o-transform: translate(0,-25%);
-  transform: translate(0,-25%);
-}
-
-.modal.in .modal-dialog {
-  -webkit-transform: translate(0,0);
-  -ms-transform: translate(0,0);
-  -o-transform: translate(0,0);
-  transform: translate(0,0);
-=======
   -webkit-transition: -webkit-transform 0.3s ease-out;
   transition: -webkit-transform 0.3s ease-out;
   -o-transition: -o-transform 0.3s ease-out;
@@ -404,7 +307,6 @@ input::-webkit-inner-spin-button {
   -ms-transform: translate(0, 0);
   -o-transform: translate(0, 0);
   transform: translate(0, 0);
->>>>>>> develop
 }
 
 .modal-content {
@@ -412,13 +314,10 @@ input::-webkit-inner-spin-button {
   background-color: #fff;
   -webkit-background-clip: padding-box;
   background-clip: padding-box;
-<<<<<<< HEAD
-  border: 1px solid rgba(0,0,0,.2);
-  border-radius: .3rem;
-=======
+
   border: 1px solid rgba(0, 0, 0, 0.2);
   border-radius: 0.3rem;
->>>>>>> develop
+
   outline: 0;
 }
 
@@ -434,11 +333,11 @@ input::-webkit-inner-spin-button {
   line-height: 1;
   color: #000;
   text-shadow: 0 1px 0 #fff;
-<<<<<<< HEAD
-  opacity: .2;
-=======
+
   opacity: 0.2;
->>>>>>> develop
+
+  opacity: 0.2;
+
   padding: 0;
   cursor: pointer;
   background: 0 0;
@@ -463,14 +362,9 @@ input::-webkit-inner-spin-button {
   padding: 15px 30px;
 }
 .pac-container {
-<<<<<<< HEAD
-  width:310px!important;
-}
+  /* modal style ends */
 
-/* modal style ends */
-=======
   width: 310px !important;
 }
 
 /* modal style ends */
->>>>>>> develop
