modal fully working

--- a/styles/promo-desktop.scss
+++ b/styles/promo-desktop.scss
@@ -2,3 +2,4 @@
 @import '../static/assets/css/promo/desktop/checkout.css';
 @import '../static/assets/css/promo/desktop/jquery.fancybox.css';
 @import '../static/assets/css/promo-style.css';
+@import '../static/assets/css/footer-modal.css';
