--- a/static/assets/css/promo/desktop/index.css
+++ b/static/assets/css/promo/desktop/index.css
@@ -71,11 +71,11 @@ li {
 MAIN CSS START
 ------------------------*/
 
-.container {
+/*.container {
   width: 1004px;
   margin: 0 auto;
   padding: 0;
-}
+}*/
 
 .dsplay {
   width: 100%;
