--- a/static/assets/css/mb-sprites-style.css
+++ b/static/assets/css/mb-sprites-style.css
@@ -1,7 +1,7 @@
 /* --- mob sprite sheet 1 --- */
 
 .sprite1 {
-  background-image: url(/static/assets/sprites/mob-spritesheet1.png);
+  background-image: url(../../assets/sprites/mob-spritesheet1.png);
   background-repeat: no-repeat;
   display: block;
 }
@@ -146,7 +146,7 @@
 /* --- mob sprite sheet 2 --- */
 
 .sprite2 {
-  background-image: url(/static/assets/sprites/mob-spritesheet2.png);
+  background-image: url(../../assets/sprites/mob-spritesheet2.png);
   background-repeat: no-repeat;
   display: block;
 }
@@ -214,7 +214,7 @@
 /* --- mob sprite sheet 3 --- */
 
 .sprite3 {
-  background-image: url(/static/assets/sprites/mob-spritesheet3.png);
+  background-image: url(../../assets/sprites/mob-spritesheet3.png);
   background-repeat: no-repeat;
   display: block;
 }
