replacing formvalidation css

--- a/static/assets/css/formvalidation/formValidation.css
+++ b/static/assets/css/formvalidation/formValidation.css
@@ -69,7 +69,7 @@
   right: 15px;
 }
 
-.fv-form-bootstrap4 .form-group.row .form-check ~ .fv-control-feedback {
+.fv-form-bootstrap4 .form-group.row .form-check~.fv-control-feedback {
   top: -7px;
   /* labelHeight/2 - iconHeight/2 */
 }
@@ -82,29 +82,27 @@
 
 /* Stacked form */
 
-.fv-form-bootstrap4:not(.form-inline) label ~ .fv-control-feedback {
+.fv-form-bootstrap4:not(.form-inline) label~.fv-control-feedback {
   top: 32px;
 }
 
 /* Without label */
 
-.fv-form-bootstrap4:not(.form-inline) label.sr-only ~ .fv-control-feedback {
+.fv-form-bootstrap4:not(.form-inline) label.sr-only~.fv-control-feedback {
   top: -7px;
   /* labelHeight/2 - iconHeight/2 */
 }
 
-.fv-form-bootstrap4:not(.form-inline) .form-check ~ .fv-control-feedback {
+.fv-form-bootstrap4:not(.form-inline) .form-check~.fv-control-feedback {
   top: 25px;
   /* labelHeight + checkboxHeight/2 - iconHeight/2 */
 }
 
-.fv-form-bootstrap4 .has-success label,
-.fv-form-bootstrap4 .has-success .fv-control-feedback {
+.fv-form-bootstrap4 .has-success label,.fv-form-bootstrap4 .has-success .fv-control-feedback {
   color: #5cb85c;
 }
 
-.fv-form-bootstrap4 .has-warning label,
-.fv-form-bootstrap4 .has-warning .fv-control-feedback {
+.fv-form-bootstrap4 .has-warning label,.fv-form-bootstrap4 .has-warning .fv-control-feedback {
   color: #f0ad4e;
 }
 
@@ -132,10 +130,7 @@
   right: 0;
 }
 
-.fv-form-foundation5.fv-form-horizontal
-  [type="checkbox"]
-  ~ .fv-control-feedback,
-.fv-form-foundation5.fv-form-horizontal [type="radio"] ~ .fv-control-feedback {
+.fv-form-foundation5.fv-form-horizontal [type="checkbox"]~.fv-control-feedback,.fv-form-foundation5.fv-form-horizontal [type="radio"]~.fv-control-feedback {
   top: -8px;
   /* labelHeight/2 - iconHeight/2 */
 }
@@ -147,8 +142,7 @@
   /* Same as height of label */
 }
 
-.fv-form-foundation5 [type="checkbox"] ~ .fv-control-feedback,
-.fv-form-foundation5 [type="radio"] ~ .fv-control-feedback {
+.fv-form-foundation5 [type="checkbox"]~.fv-control-feedback,.fv-form-foundation5 [type="radio"]~.fv-control-feedback {
   top: 15px;
 }
 
@@ -159,9 +153,8 @@
   /* Same as $alert-color, .error */
 }
 
-.fv-form-foundation5 .fv-has-success label,
-.fv-form-foundation5 .fv-has-success .fv-control-feedback {
-  color: #43ac6a;
+.fv-form-foundation5 .fv-has-success label,.fv-form-foundation5 .fv-has-success .fv-control-feedback {
+  color: #43AC6A;
   /* Same as $success-color */
 }
 
@@ -180,8 +173,7 @@
   line-height: 39px;
 }
 
-.fv-form-foundation [type="checkbox"] ~ .fv-control-feedback,
-.fv-form-foundation [type="radio"] ~ .fv-control-feedback {
+.fv-form-foundation [type="checkbox"]~.fv-control-feedback,.fv-form-foundation [type="radio"]~.fv-control-feedback {
   top: -7px;
   /* labelHeight/2 - iconHeight/2 */
 }
@@ -192,25 +184,19 @@
 
 /* Stacked form */
 
-.fv-form-foundation label .fv-control-feedback,
-.fv-form-foundation fieldset [type="checkbox"] ~ .fv-control-feedback,
-.fv-form-foundation fieldset [type="radio"] ~ .fv-control-feedback {
+.fv-form-foundation label .fv-control-feedback,.fv-form-foundation fieldset [type="checkbox"]~.fv-control-feedback,.fv-form-foundation fieldset [type="radio"]~.fv-control-feedback {
   top: 25px;
   /* Same as height of label */
 }
 
 /* Color */
 
-.fv-form-foundation .fv-has-error label,
-.fv-form-foundation .fv-has-error fieldset legend,
-.fv-form-foundation .fv-has-error .fv-control-feedback {
+.fv-form-foundation .fv-has-error label,.fv-form-foundation .fv-has-error fieldset legend,.fv-form-foundation .fv-has-error .fv-control-feedback {
   color: #ec5840;
   /* Same as .alert */
 }
 
-.fv-form-foundation .fv-has-success label,
-.fv-form-foundation .fv-has-success fieldset legend,
-.fv-form-foundation .fv-has-success .fv-control-feedback {
+.fv-form-foundation .fv-has-success label,.fv-form-foundation .fv-has-success fieldset legend,.fv-form-foundation .fv-has-success .fv-control-feedback {
   color: #3adb76;
   /* Same as .success */
 }
@@ -234,8 +220,7 @@
 
 /* Horizontal form */
 
-.fv-form-pure.pure-form-aligned [type="checkbox"] ~ .fv-control-feedback,
-.fv-form-pure.pure-form-aligned [type="radio"] ~ .fv-control-feedback {
+.fv-form-pure.pure-form-aligned [type="checkbox"]~.fv-control-feedback,.fv-form-pure.pure-form-aligned [type="radio"]~.fv-control-feedback {
   top: -9px;
   /* labelHeight/2 - iconHeight/2 */
 }
@@ -247,17 +232,13 @@
 
 /* Stacked form */
 
-.fv-form-pure .fv-has-error label,
-.fv-form-pure .fv-has-error .fv-help-block,
-.fv-form-pure .fv-has-error .fv-control-feedback {
-  color: #ca3c3c;
+.fv-form-pure .fv-has-error label,.fv-form-pure .fv-has-error .fv-help-block,.fv-form-pure .fv-has-error .fv-control-feedback {
+  color: #CA3C3C;
   /* Same as .button-error */
 }
 
-.fv-form-pure .fv-has-success label,
-.fv-form-pure .fv-has-success .fv-help-block,
-.fv-form-pure .fv-has-success .fv-control-feedback {
-  color: #1cb841;
+.fv-form-pure .fv-has-success label,.fv-form-pure .fv-has-success .fv-help-block,.fv-form-pure .fv-has-success .fv-control-feedback {
+  color: #1CB841;
   /* Same as .button-success */
 }
 
@@ -284,29 +265,24 @@
   top: 0;
 }
 
-.fv-form-uikit.uk-form-horizontal [type="checkbox"] ~ .fv-control-feedback,
-.fv-form-uikit.uk-form-horizontal [type="radio"] ~ .fv-control-feedback {
+.fv-form-uikit.uk-form-horizontal [type="checkbox"]~.fv-control-feedback,.fv-form-uikit.uk-form-horizontal [type="radio"]~.fv-control-feedback {
   top: -7px;
 }
 
 /* Without labels */
 
-.fv-form-uikit label.fv-sr-only ~ .fv-control-feedback {
+.fv-form-uikit label.fv-sr-only~.fv-control-feedback {
   top: -7px !important;
 }
 
 /* Stacked form */
 
-.fv-form-uikit .fv-has-error label,
-.fv-form-uikit .fv-has-error .uk-form-label,
-.fv-form-uikit .fv-has-error .fv-control-feedback {
-  color: #d85030;
+.fv-form-uikit .fv-has-error label,.fv-form-uikit .fv-has-error .uk-form-label,.fv-form-uikit .fv-has-error .fv-control-feedback {
+  color: #D85030;
   /* Same as .uk-form-danger */
 }
 
-.fv-form-uikit .fv-has-success label,
-.fv-form-uikit .fv-has-success .uk-form-label,
-.fv-form-uikit .fv-has-success .fv-control-feedback {
-  color: #659f13;
+.fv-form-uikit .fv-has-success label,.fv-form-uikit .fv-has-success .uk-form-label,.fv-form-uikit .fv-has-success .fv-control-feedback {
+  color: #659F13;
   /* Same as .uk-form-success */
 }
