--- a/static/desktop/css/style.css
+++ b/static/desktop/css/style.css
@@ -883,3 +883,172 @@ ul.user-info li span {
 }
 
 /* modal style ends */
+
+/* loading bar */
+
+.js-div-loading-bar {
+  animation: spin 4s linear infinite;
+  bottom: 0;
+  display: none;
+  left: 0;
+  position: fixed;
+  right: 0;
+  top: 0;
+  z-index: 999999;
+  background-color: rgba(35, 35, 35, 0.2);
+}
+
+.js-div-loading-bar .sk-circle {
+  height: 60px;
+  left: calc(50% - 30px);
+  position: absolute;
+  top: calc(50% - 30px);
+  width: 60px;
+}
+
+.js-div-loading-bar .sk-circle .sk-child {
+  height: 100%;
+  left: 0;
+  position: absolute;
+  top: 0;
+  width: 100%;
+}
+
+.js-div-loading-bar .sk-circle .sk-child::before {
+  animation: sk-circleBounceDelay 1.2s infinite ease-in-out both;
+  background-color: #ff3f3f;
+  border-radius: 100%;
+
+  content: "";
+
+  display: block;
+  height: 15%;
+  margin: 0 auto;
+  width: 15%;
+}
+
+.js-div-loading-bar .sk-circle .sk-circle1 {
+  transform: rotate(0deg);
+}
+
+.js-div-loading-bar .sk-circle .sk-circle1::before {
+  animation-delay: 1.2s;
+}
+
+.js-div-loading-bar .sk-circle .sk-circle2 {
+  transform: rotate(30deg);
+}
+
+.js-div-loading-bar .sk-circle .sk-circle2::before {
+  animation-delay: 1.1s;
+}
+
+.js-div-loading-bar .sk-circle .sk-circle3 {
+  transform: rotate(60deg);
+}
+
+.js-div-loading-bar .sk-circle .sk-circle3::before {
+  animation-delay: 1s;
+}
+
+.js-div-loading-bar .sk-circle .sk-circle4 {
+  transform: rotate(90deg);
+}
+
+.js-div-loading-bar .sk-circle .sk-circle4::before {
+  animation-delay: 0.9s;
+}
+
+.js-div-loading-bar .sk-circle .sk-circle5 {
+  transform: rotate(120deg);
+}
+
+.js-div-loading-bar .sk-circle .sk-circle5::before {
+  animation-delay: 0.8s;
+}
+
+.js-div-loading-bar .sk-circle .sk-circle6 {
+  transform: rotate(150deg);
+}
+
+.js-div-loading-bar .sk-circle .sk-circle6::before {
+  animation-delay: 0.7s;
+}
+
+.js-div-loading-bar .sk-circle .sk-circle7 {
+  transform: rotate(180deg);
+}
+
+.js-div-loading-bar .sk-circle .sk-circle7::before {
+  animation-delay: 0.6s;
+}
+
+.js-div-loading-bar .sk-circle .sk-circle8 {
+  transform: rotate(210deg);
+}
+
+.js-div-loading-bar .sk-circle .sk-circle8::before {
+  animation-delay: 0.5s;
+}
+
+.js-div-loading-bar .sk-circle .sk-circle9 {
+  transform: rotate(240deg);
+}
+
+.js-div-loading-bar .sk-circle .sk-circle9::before {
+  animation-delay: 0.4s;
+}
+
+.js-div-loading-bar .sk-circle .sk-circle10 {
+  transform: rotate(270deg);
+}
+
+.js-div-loading-bar .sk-circle .sk-circle10::before {
+  animation-delay: 0.3s;
+}
+
+.js-div-loading-bar .sk-circle .sk-circle11 {
+  transform: rotate(300deg);
+}
+
+.js-div-loading-bar .sk-circle .sk-circle11::before {
+  animation-delay: 0.2s;
+}
+
+.js-div-loading-bar .sk-circle .sk-circle12 {
+  transform: rotate(330deg);
+}
+
+.js-div-loading-bar .sk-circle .sk-circle12::before {
+  animation-delay: 0.1s;
+}
+
+@-webkit-keyframes sk-circleBounceDelay {
+  0%,
+  80%,
+  100% {
+    -webkit-transform: scale(0);
+    transform: scale(0);
+  }
+
+  40% {
+    -webkit-transform: scale(1);
+    transform: scale(1);
+  }
+}
+
+@keyframes sk-circleBounceDelay {
+  0%,
+  80%,
+  100% {
+    -webkit-transform: scale(0);
+    transform: scale(0);
+  }
+
+  40% {
+    -webkit-transform: scale(1);
+    transform: scale(1);
+  }
+}
+
+/* loading bar ends */
