Fixed Issues:  ASRA-86 - Amex logo is missing in home - fixed.  ASRA-127 - Refund Policy issue - fixed.  ASRA-119 - Phone should be changed to Phone Number - fixed.  ASRA-129 - Cart Page | Price of the product should be 2 decimal -  fixed.  ASRA-128 - Cart Page | Product image boundary should not be visisble -  fixed.  ASRA-126 - Product description - "Improves information rention & memory  recall" | `rention` should be changed to `retention`- fixed.  ASRA-85 - Refund Policy - fixed.  ASRA-101 -"Refund policy" link is available in react promo page but not  present in production promo page - fixed.  "First Name" should be changed to "First name" - fixed.  ASRA-100 - Cart Page | Shipping Information block | Information text  missing - fixed.

--- a/static/assets/css/style.css
+++ b/static/assets/css/style.css
@@ -1847,7 +1847,11 @@ table.tbl2 {
   position: relative;
   padding-left: 80px;
 }
-
+.sec1crt-frmlft__ship-info {
+  font-size: 16px;
+  line-height: 22.5px;
+  margin: 0 10px 0;
+}
 .hdng-icon {
   position: absolute;
   left: 15px;
@@ -1978,7 +1982,7 @@ table.tbl2 {
   font-size: 16px;
   color: #626262;
   text-align: left;
-  line-height: 18px;
+  line-height: 23px;
 }
 
 .chkbx-chk {
@@ -1990,7 +1994,7 @@ table.tbl2 {
 .cards {
   margin: 20px 0;
   float: left;
-  padding-left: 100px;
+  padding-left: 150px;
 }
 
 .field.no-icon {
