--- a/static/assets/css/promo/desktop/index.css
+++ b/static/assets/css/promo/desktop/index.css
@@ -126,6 +126,12 @@ MAIN CSS START
   padding: 56px 0 0 0;
 }
 
+.s2hding {
+  line-height: 40px;
+  padding-top: 58px;
+  padding-bottom: 2px;
+}
+
 .s3hding {
   padding: 64px 0 0 308px;
 }
@@ -1114,47 +1120,43 @@ ul.s7list li span {
   }
 }
 
-
-@-webkit-keyframes fade-in{
-    from{
-        opacity:1;
-        top:0px;
-    }
-    to{
-        opacity:0;
-        top:0px;
-    }
-  
+@-webkit-keyframes fade-in {
+  from {
+    opacity: 1;
+    top: 0px;
+  }
+  to {
+    opacity: 0;
+    top: 0px;
+  }
 }
-.text-animated-one{
-    display:inline;
-    position:relative;
-    top:0px;
-    -webkit-animation:fade-in 4s infinite;
-
+.text-animated-one {
+  display: inline;
+  position: relative;
+  top: 0px;
+  -webkit-animation: fade-in 4s infinite;
 }
-.text-animated-two{
-    opacity:0;
-    display:inline;
-    position:relative;
-    margin-left:-294px;
-    -webkit-animation:fade-in 4s infinite;
-    -webkit-animation-delay: 2s;
+.text-animated-two {
+  opacity: 0;
+  display: inline;
+  position: relative;
+  margin-left: -294px;
+  -webkit-animation: fade-in 4s infinite;
+  -webkit-animation-delay: 2s;
 }
 
-.aggettivi{
-    display:inline;
-    width:100px;
-    height:100px;
+.aggettivi {
+  display: inline;
+  width: 100px;
+  height: 100px;
 }
 
 /* modal style */
 .modal-title {
-    text-align: center;
+  text-align: center;
 }
 .modal-body p {
   text-align: left;
 }
 
 /* modal style ends */
-
