--- a/static/mobile/css/style.css
+++ b/static/mobile/css/style.css
@@ -140,11 +140,12 @@ MAIN CSS START
   text-align: center;
   border: 3px dashed #000;
   padding: 27px 10px 20px 20px;
+  height: 960px;
 }
 .up-btl1 {
 }
 .free-ship {
-  margin: 8px 0 0 0;
+  /* margin: 8px 0 0 0; */
 }
 .dot-rgt-txt1 {
   color: #212020;
@@ -161,7 +162,7 @@ MAIN CSS START
   float: left;
   line-height: 40px;
   width: 100%;
-  padding: 8px 0 0 0;
+  padding: 0;
 }
 .dot-rgt-txt3 {
   color: #1e1e1e;
@@ -848,3 +849,11 @@ ul.user-info li span {
 }
 
 /* loading bar ends */
+
+/*************************************
+ * CSS FOR UPSELL
+ ************************************/
+.success-modal h2,
+p {
+  padding-top: 10px;
+}
