--- a/static/desktop/css/style.css
+++ b/static/desktop/css/style.css
@@ -351,6 +351,7 @@ a.select:hover {
   float: left;
   text-align: center;
   padding: 0 0 22px 0;
+  height: 349px;
 }
 .satisfaction-seal {
   margin: -51px auto 0 auto;
