--- a/static/mobile/css/style.css
+++ b/static/mobile/css/style.css
@@ -346,6 +346,7 @@ ul.s1list li {
   box-sizing: border-box;
   margin: 94px auto 15px auto;
   width: 96%;
+  height: 378px;
 }
 .satisfaction-seal {
   margin: -51px auto 0 auto;
