--- a/static/desktop/css/style.css
+++ b/static/desktop/css/style.css
@@ -383,12 +383,12 @@ a.nothank {
   color: #158fc0;
   text-align: center;
   text-decoration: underline;
-  margin: 24px 0 0 0;
+  margin: 24px 20px 0 20px;
   display: block;
 }
 .secure-logos {
   margin: 24px auto 19px auto;
-  display: block;
+  padding-left: 10px;
 }
 
 .s1hding {
@@ -461,6 +461,12 @@ FOOTER CSS
 .ftrtxt a,
 .ftrtxt a:hover {
   color: #000101;
+}
+.footer .contentWrap {
+  padding-top: 10px;
+}
+.footer .contentWrap p {
+  padding-top: 0px;
 }
 
 /*-------------------------------------
