--- a/static/assets/css/promo/desktop/index.css
+++ b/static/assets/css/promo/desktop/index.css
@@ -18,25 +18,25 @@ body {
 }
 
 div,
-ul,
+form,
 h1,
 h2,
 h3,
 h4,
 h5,
+img,
+input,
 li,
 p,
-img,
-form,
-input,
-textarea {
+textarea,
+ul {
   margin: 0;
   padding: 0;
 }
 
 table,
-tr,
-td {
+td,
+tr {
   border: 0;
 }
 
@@ -105,7 +105,7 @@ MAIN CSS START
 .topbartxt {
   font-size: 18px;
   line-height: 27px;
-  padding: 2px 0 0 0;
+  padding: 2px 0 0;
   color: #fff;
   text-align: center;
 }
@@ -128,7 +128,7 @@ MAIN CSS START
   color: #395761;
   text-align: left;
   letter-spacing: -1px;
-  padding: 56px 0 0 0;
+  padding: 56px 0 0;
 }
 
 .s3hding {
@@ -136,17 +136,25 @@ MAIN CSS START
 }
 
 .s4hding {
-  padding: 62px 0 0 0;
+  padding: 62px 0 0;
+}
+
+.wistia_responsive_wrapper iframe {
+  margin-top: 20px;
+  position: relative;
+  border: 4px solid #fff;
+  -webkit-box-shadow: 0 0 4px 3px #e8e8e8;
+  box-shadow: 0 0 4px 3px #e8e8e8;
 }
 
 .s5hding,
 .s6hding {
-  padding: 66px 0 0 0;
+  padding: 66px 0 0;
   text-align: center;
 }
 
 .s6hding {
-  padding: 79px 0 0 0;
+  padding: 79px 0 0;
   font-size: 34px;
 }
 
@@ -172,7 +180,7 @@ MAIN CSS START
 .s2hdimg,
 .s3hdimg,
 .s5hdimg {
-  margin: 1px 0 0 0;
+  margin: 1px 0 0;
   display: block;
 }
 
@@ -181,13 +189,13 @@ MAIN CSS START
 }
 
 .s5hdimg {
-  margin: 1px auto 0 auto;
+  margin: 1px auto 0;
 }
 
 /*-----------------sec1------------------*/
 
 .section1 {
-  background: url(../../../../promo/desktop/images/section1.jpg) center top
+  background: url("../../../../promo/desktop/images/section1.jpg") center top
     no-repeat;
   height: 720px;
 }
@@ -240,7 +248,7 @@ ul.s1list li {
   line-height: 25px;
   color: #263238;
   text-align: left;
-  margin: 17px 0 0 0;
+  margin: 17px 0 0;
   letter-spacing: -1px;
 }
 
@@ -295,7 +303,7 @@ ul.s1list li span {
   color: #fff;
   text-align: center;
   height: 33px;
-  padding: 3px 0 0 0;
+  padding: 3px 0 0;
 }
 
 .sldrtxt i {
@@ -307,7 +315,7 @@ ul.s1list li span {
   height: 78px;
   width: 100%;
   /*background:url(../../../../promo/desktop/images/frmhdr.jpg) center top no-repeat;*/
-  margin: 0 0 14px 0;
+  margin: 0 0 14px;
 }
 
 .frmhd-txt {
@@ -318,7 +326,7 @@ ul.s1list li span {
   text-align: center;
   text-transform: uppercase;
   letter-spacing: -1px;
-  padding: 12px 0 0 0;
+  padding: 12px 0 0;
 }
 
 .frmhd-txt span {
@@ -329,7 +337,7 @@ ul.s1list li span {
 
 .frmElemts {
   float: left;
-  margin: 7px 0 0 0;
+  margin: 7px 0 0;
 }
 
 .frmElemts input,
@@ -383,7 +391,7 @@ ul.s1list li span {
 }
 
 .submit {
-  margin: 15px auto 0 auto;
+  margin: 15px auto 0;
   display: block;
   /*background: url(../../../../promo/desktop/images/submit.png) left top no-repeat;*/
   height: 67px;
@@ -400,7 +408,7 @@ ul.s1list li span {
 /*-----------------sec2------------------*/
 
 .section2 {
-  background: url(../../../../promo/desktop/images/section2.jpg) center top
+  background: url("../../../../promo/desktop/images/section2.jpg") center top
     no-repeat;
 
   height: 799px;
@@ -408,7 +416,7 @@ ul.s1list li span {
 
 .sec2txt {
   text-align: left;
-  padding: 12px 0 0 0;
+  padding: 12px 0 0;
   width: 610px;
 }
 
@@ -418,7 +426,7 @@ ul.s1list li span {
   line-height: 30px;
   color: #058a4e;
   text-align: left;
-  padding: 33px 0 0 0;
+  padding: 33px 0 0;
   letter-spacing: -1px;
 }
 
@@ -433,12 +441,12 @@ ul.s1list li span {
   color: #fff;
   text-align: left;
   padding: 2px 0 0 14px;
-  margin: 8px 0 0 0;
+  margin: 8px 0 0;
   box-sizing: border-box;
 }
 
 ul.s2list {
-  padding: 25px 0 0 0;
+  padding: 25px 0 0;
 }
 
 ul.s2list li {
@@ -461,7 +469,7 @@ ul.s2list li:nth-child(4) {
 }
 
 .s2limg {
-  margin: 0 0 0 0;
+  margin: 0;
   display: block;
 }
 
@@ -472,7 +480,7 @@ ul.s2list li:nth-child(4) {
   color: #395761;
   text-align: left;
   text-transform: uppercase;
-  padding: 15px 0 0 0;
+  padding: 15px 0 0;
 }
 
 .s2ltxt span {
@@ -480,7 +488,7 @@ ul.s2list li:nth-child(4) {
 }
 
 .s5limg2 {
-  margin: 12px 0 0 0px;
+  margin: 12px 0 0;
   display: block;
 }
 
@@ -503,7 +511,7 @@ ul.s2list li:nth-child(4) {
   color: #2c2c2c;
   text-align: center;
   text-transform: uppercase;
-  padding: 15px 0 0 0;
+  padding: 15px 0 0;
   letter-spacing: -1px;
 }
 
@@ -530,7 +538,7 @@ ul.s2list li:nth-child(4) {
   line-height: 35px;
   color: #fff;
   text-align: left;
-  padding: 22px 0 0 0;
+  padding: 22px 0 0;
   letter-spacing: -1px;
 }
 
@@ -558,7 +566,7 @@ p.striptxt2 {
 /*-----------------sec3------------------*/
 
 .section3 {
-  background: url(../../../../promo/desktop/images/section3.jpg) center top
+  background: url("../../../../promo/desktop/images/section3.jpg") center top
     no-repeat;
 
   height: 730px;
@@ -615,7 +623,7 @@ ul.s3list li i {
 
 ul.s4-list1 {
   margin: 20px 0 0 7px;
-  padding: 0 0 0 0;
+  padding: 0;
 }
 
 ul.s4-list1 li {
@@ -629,8 +637,8 @@ ul.s4-list1 li {
   text-align: left;
   font-weight: 700;
   color: #263238;
-  margin: 0 0 0 0;
-  padding: 0 15px 0 15px;
+  margin: 0;
+  padding: 0 15px;
   text-transform: uppercase;
 }
 
@@ -645,17 +653,17 @@ ul.s4-list1 li:nth-child(3) {
   /*background: url(../../../../promo/desktop/images/s4-icon3.jpg) left 8px no-repeat;*/
   margin: -2px 0 0 28px;
   border-right: none;
-  padding: 2px 0 0 0;
+  padding: 2px 0 0;
 }
 
 .s4-txt1 {
   width: 588px;
-  margin: 0 0 0 0;
+  margin: 0;
 }
 
 ul.s4-list2 {
   margin: 30px 0 0 -3px;
-  padding: 0 0 0 0;
+  padding: 0;
 }
 
 ul.s4-list2 li {
@@ -664,7 +672,7 @@ ul.s4-list2 li {
   line-height: 24px;
   text-align: left;
   color: #2d2d2d;
-  margin: 0 0 0 0;
+  margin: 0;
   /*padding: 0 0 0 135px;*/
   width: 675px;
 }
@@ -679,12 +687,12 @@ ul.s4-list2 li span {
 
 ul.s4-list2 li:nth-child(2) {
   /*background:url(../../../../promo/desktop/images/s4-icon5.jpg) left top no-repeat;*/
-  margin: 22px 0 0 0;
+  margin: 22px 0 0;
 }
 
 ul.s4-list2 li:nth-child(3) {
   /*background:url(../../../../promo/desktop/images/s4-icon6.jpg) left top no-repeat;*/
-  margin: 21px 0 0 0;
+  margin: 21px 0 0;
 }
 
 .s4-img-bg {
@@ -702,8 +710,8 @@ ul.s4-list2 li:nth-child(3) {
   font-size: 40px;
   color: #eccf30;
   line-height: 30px;
-  margin: 0 0 0 0;
-  padding: 128px 0 0 0;
+  margin: 0;
+  padding: 128px 0 0;
 }
 
 .s4-img-bg-txt1 span {
@@ -716,8 +724,8 @@ ul.s4-list2 li:nth-child(3) {
   font-size: 18px;
   line-height: 21px;
   text-align: center;
-  margin: 0 0 0 0;
-  padding: 9px 30px 0 30px;
+  margin: 0;
+  padding: 9px 30px 0;
   color: #fff;
 }
 
@@ -739,13 +747,13 @@ ul.s4-list2 li:nth-child(3) {
 
 .s5-txt1 {
   text-align: center;
-  margin: 0 0 0 0;
-  padding: 15px 140px 0 140px;
+  margin: 0;
+  padding: 15px 140px 0;
 }
 
 .s5-line {
   display: block;
-  margin: 29px auto 0 auto;
+  margin: 29px auto 0;
 }
 
 .s5left,
@@ -800,7 +808,7 @@ ul.s4-list2 li:nth-child(3) {
 }
 
 .limited-offer {
-  float: left;
+  /* float: left;
   width: 100%;
   color: #ff0000;
   font-size: 28px;
@@ -808,7 +816,17 @@ ul.s4-list2 li:nth-child(3) {
   text-align: center;
   padding-right: 15px;
   box-sizing: border-box;
-  margin-top: 35px;
+  margin-top: 35px; */
+
+  float: left;
+  width: 100%;
+  color: #ff0000;
+  font-size: 40px;
+  font-weight: 600;
+  text-align: center;
+  padding-right: 15px;
+  box-sizing: border-box;
+  margin-top: 80px;
 }
 
 #clockdiv {
@@ -818,6 +836,7 @@ ul.s4-list2 li:nth-child(3) {
   margin-top: 14px;
   padding-right: 15px;
   box-sizing: border-box;
+  display: none;
 }
 
 #clockdiv > div {
@@ -900,8 +919,8 @@ ul.s4-list2 li:nth-child(3) {
   line-height: 28px;
   text-align: center;
   color: #395761;
-  margin: 20px auto 0 auto;
-  padding: 0 0 0 0;
+  margin: 20px auto 0;
+  padding: 0;
 }
 
 .s5-txt5 span {
@@ -912,11 +931,11 @@ ul.s4-list2 li:nth-child(3) {
 
 .s5-logos {
   display: block;
-  margin: 29px auto 0 auto;
+  margin: 29px auto 0;
 }
 
 .cnn {
-  margin: 6px 0 -3px 0;
+  margin: 6px 0 -3px;
 }
 
 /*-----------------sec6------------------*/
@@ -937,7 +956,7 @@ ul.s4-list2 li:nth-child(3) {
 }
 
 .t-box2 {
-  margin: 30px 0 0 0px;
+  margin: 30px 0 0;
 }
 
 .t-txt1 {
@@ -947,7 +966,7 @@ ul.s4-list2 li:nth-child(3) {
   text-align: center;
   color: #009b5b;
   font-style: italic;
-  margin: 0 auto 0 auto;
+  margin: 0 auto;
   padding: 72px 55px 0 53px;
 }
 
@@ -977,7 +996,7 @@ ul.s4-list2 li:nth-child(3) {
   color: #979797;
   text-transform: uppercase;
   margin: 0 0 0 235px;
-  padding: 18px 0 0 0;
+  padding: 18px 0 0;
 }
 
 .t-txt3 span {
@@ -989,7 +1008,7 @@ ul.s4-list2 li:nth-child(3) {
 /*-----------------sec1------------------*/
 
 .section7 {
-  background: url(../../../../promo/desktop/images/section7.jpg) center top
+  background: url("../../../../promo/desktop/images/section7.jpg") center top
     no-repeat;
 
   height: 685px;
@@ -1034,7 +1053,7 @@ ul.s7list li {
   line-height: 25px;
   color: #263238;
   text-align: left;
-  margin: 17px 0 0 0;
+  margin: 17px 0 0;
   letter-spacing: -1px;
 }
 
@@ -1063,8 +1082,8 @@ ul.s7list li span {
 
 .footer {
   border-top: 1px solid #999;
-  margin: 0 0 0 0;
-  padding: 0 0 40px 0;
+  margin: 0;
+  padding: 0 0 40px;
 }
 
 .ftr-txt {
@@ -1072,8 +1091,8 @@ ul.s7list li span {
   line-height: 24px;
   text-align: center;
   color: #000101;
-  margin: 0 0 0 0;
-  padding: 40px 10px 0 10px;
+  margin: 0;
+  padding: 40px 10px 0;
 }
 
 .ftr-txt a,
@@ -1093,7 +1112,6 @@ ul.s7list li span {
   animation-iteration-count: infinite;
   -webkit-animation-iteration-count: infinite;
 }
-
 @keyframes pulse {
   0% {
     transform: scale(0.9);
@@ -1110,7 +1128,6 @@ ul.s7list li span {
     opacity: 0.9;
   }
 }
-
 @-webkit-keyframes pulse {
   0% {
     -webkit-transform: scale(0.95);
@@ -1127,23 +1144,25 @@ ul.s7list li span {
     opacity: 0.7;
   }
 }
-
 @-webkit-keyframes fade-in {
   from {
     opacity: 1;
-    top: 0px;
+    top: 0;
   }
+
   to {
     opacity: 0;
-    top: 0px;
+    top: 0;
   }
 }
+
 .text-animated-one {
   display: inline;
   position: relative;
-  top: 0px;
+  top: 0;
   -webkit-animation: fade-in 4s infinite;
 }
+
 .text-animated-two {
   opacity: 0;
   display: inline;
@@ -1163,6 +1182,7 @@ ul.s7list li span {
 .modal-title {
   text-align: center;
 }
+
 .modal-body p {
   text-align: left;
 }
