--- a/static/assets/css/common.css
+++ b/static/assets/css/common.css
@@ -136,11 +136,10 @@
 .js-div-loading-bar .sk-circle .sk-circle12::before {
   animation-delay: 0.1s;
 }
-
 @-webkit-keyframes sk-circleBounceDelay {
   0%,
-  80%,
-  100% {
+  100%,
+  80% {
     -webkit-transform: scale(0);
     transform: scale(0);
   }
@@ -150,11 +149,10 @@
     transform: scale(1);
   }
 }
-
 @keyframes sk-circleBounceDelay {
   0%,
-  80%,
-  100% {
+  100%,
+  80% {
     -webkit-transform: scale(0);
     transform: scale(0);
   }
@@ -200,7 +198,6 @@
   width: auto;
   margin: 10px;
 }
-
 @media (min-width: 576px) {
   .modal-dialog {
     max-width: 600px;
@@ -290,7 +287,7 @@
 
 .comment-box {
   height: 100px !important;
-  padding-left: 0px !important;
+  padding-left: 0 !important;
 }
 
 /* modal style ends */
@@ -431,11 +428,10 @@
 .js-div-loading-bar .sk-circle .sk-circle12::before {
   animation-delay: 0.1s;
 }
-
 @-webkit-keyframes sk-circleBounceDelay {
   0%,
-  80%,
-  100% {
+  100%,
+  80% {
     -webkit-transform: scale(0);
     transform: scale(0);
   }
@@ -445,11 +441,10 @@
     transform: scale(1);
   }
 }
-
 @keyframes sk-circleBounceDelay {
   0%,
-  80%,
-  100% {
+  100%,
+  80% {
     -webkit-transform: scale(0);
     transform: scale(0);
   }
@@ -494,7 +489,6 @@
   width: auto;
   margin: 10px;
 }
-
 @media (min-width: 576px) {
   .modal-dialog {
     max-width: 600px;
@@ -580,7 +574,7 @@
 
 .comment-box {
   height: 100px !important;
-  padding-left: 0px !important;
+  padding-left: 0 !important;
 }
 
 /*
@@ -598,7 +592,8 @@ Styles for animated modal
   background: #619a5f !important;
 
   transform: translateY(-80px);
-  transition: all 0.5s; /* Should match `data-animation-duration` parameter */
+  transition: all 0.5s;
+  /* Should match `data-animation-duration` parameter */
 }
 
 .animated-modal * {
@@ -637,8 +632,25 @@ Styles for animated modal
   transition-delay: 0.2s;
 }
 
+.fancybox-content {
+  width: 253px;
+}
+
 .success-modal {
   text-align: center !important;
+}
+
+.ReactModal__Content {
+  opacity: 0;
+}
+
+.ReactModal__Content--after-open {
+  opacity: 1;
+  transition: opacity 150ms;
+}
+
+.ReactModal__Content--before-close {
+  opacity: 0;
 }
 
 /* modal style ends */
