Fixed Issues: ASRA-161 - done. ASRA-163 - done. ASRA-164 - done. ASRA-165 - done. ----- 1) please remove package-lock.json, we are using yarn. - done. 2) There is no need for large="true" it's a boolean param. - done. 3) Also remove vim.exe.stackdump - done.

--- a/static/assets/css/promo/desktop/checkout.css
+++ b/static/assets/css/promo/desktop/checkout.css
@@ -903,6 +903,11 @@ a.what {
   text-transform: uppercase;
 }
 
+.footer p {
+  text-align: center;
+  margin: 25px 0;
+}
+
 /*------------thank------------*/
 
 .thnk-bg {
