--- a/static/desktop/css/style.css
+++ b/static/desktop/css/style.css
@@ -774,7 +774,12 @@ ul.user-info li span {
   -webkit-box-shadow: 0 0 4px 3px #e8e8e8;
   box-shadow: 0 0 4px 3px #e8e8e8;
 }
-
+p.user-info__value {
+  margin-left: 15px;
+  word-break: break-all;
+  width: calc(100% - 100px);
+  padding-top: 0;
+}
 /* modal style */
 
 .fade {
