--- a/static/mobile/css/style.css
+++ b/static/mobile/css/style.css
@@ -631,6 +631,10 @@ a.nothank {
   font-weight: 600;
   text-transform: uppercase;
   color: #2f2f2f;
+  padding-right: 15px;
+}
+.summry-table .row.total-price span {
+  margin-left: 11px;
 }
 .ty-rgt {
   float: right;
@@ -677,6 +681,12 @@ ul.user-info li span {
   left: 0;
   color: #2b2b2b;
   font-weight: 600;
+}
+p.user-info__value-mb {
+  padding-top: 0;
+  margin-left: 35px;
+  word-break: break-all;
+  width: calc(100% - 40px);
 }
 
 /* modal style */
