Issue - 404 error: Fixed path to image up-bg.jpg

--- a/static/desktop/css/checkout.css
+++ b/static/desktop/css/checkout.css
@@ -12,7 +12,7 @@ body {
   -moz-font-smoothing: antialiased;
   font-smoothing: antialiased;
   font-family: "Hind", sans-serif;
-  background: url(../images/up-bg.jpg) center top no-repeat;
+  background: url(../../assets/images/upsell2/up-bg.jpg) center top no-repeat;
   font-weight: 400;
 }
 div,
