--- a/static/assets/css/promo/desktop/index.css
+++ b/static/assets/css/promo/desktop/index.css
@@ -139,6 +139,19 @@ MAIN CSS START
   padding: 62px 0 0;
 }
 
+.wistia_responsive_wrapper {
+  height: 100%;
+  left: 0;
+  position: absolute;
+  top: 0;
+  width: 100%;
+}
+
+.wistia_responsive_wrapper .wistia_embed {
+  height: 100%;
+  width: 100%;
+}
+
 .wistia_responsive_wrapper iframe {
   margin-top: 20px;
   position: relative;
