--- a/static/mobile/css/upsell-treatment1.css
+++ b/static/mobile/css/upsell-treatment1.css
@@ -150,7 +150,7 @@ li {
   font-size: 30px;
   line-height: 42px;
   color: #0a0a0a;
-  background: url(../images/save-bg.png) no-repeat center center;
+  background: url(/static/assets/images/save-bg.png) no-repeat center center;
   margin-top: 9px;
   font-weight: 500;
 }
