--- a/static/assets/css/promo/desktop/index.css
+++ b/static/assets/css/promo/desktop/index.css
@@ -748,57 +748,9 @@ ul.s4-list2 li:nth-child(3) {
 
 /*-----------------sec5------------------*/
 .section5 {
-  height:798px;
+  height: 798px;
 }
-.s5-txt1{
-  text-align: center;
-  margin: 0 0 0 0;
-  padding: 15px 140px 0 140px;
-  }
-.s5-line{
-  display:block;
-  margin:29px auto 0 auto;
-  }
-.s5left, .s5right{
-  display: inline-block;
-    width:50%;
-    float: left;
-    margin: 25px 0 0 -9px;
-  }
-.s5right{
-  margin:50px 0 0 7px;
-  }
-ul.sec5-list{
-  float:left;
-  width:100%;
-}
-ul.sec5-list li{
-  border:1px dotted #e8e8e8;
-  border-radius:10px;
-  text-align:center;
-  background:#f7f7f7;
-  width:47%;
-  margin:10px 0;
-}
-ul.sec5-list li:first-child{width:100%;}
-ul.sec5-list li:nth-child(2) img{padding:17px 10px;}
-ul.sec5-list li img{
-  display:inline-block;
-  padding:10px;
-  vertical-align:middle;
-}
-ul.sec5-list li p{
-  background:#fff;
-  width:100%;
-  display:inline-block;
-  box-sizing:border-box;
-  padding:20px 15px;
-  font-size:18px;
-  line-height:22px;
-}
-ul.sec5-list li:first-child p{
-  padding:20px 60px;
-}
+
 .s5left{
   position:relative;
 }
@@ -846,6 +798,69 @@ ul.sec5-list li:first-child p{
   -o-transform: translateX(-50%);
   -ms-transform: translateX(-50%);
 }
+
+.wrapper-411716 ul.sec5-list{
+  float:left;
+  width:100%;
+}
+.wrapper-411716 ul.sec5-list li{
+  border:1px dotted #e8e8e8;
+  border-radius:10px;
+  text-align:center;
+  background:#f7f7f7;
+  width:47%;
+  margin:10px 0;
+}
+.wrapper-411716 ul.sec5-list li:first-child{width:100%;}
+.wrapper-411716 ul.sec5-list li:nth-child(2) img{padding:17px 10px;}
+.wrapper-411716 ul.sec5-list li img{
+  display:inline-block;
+  padding:10px;
+  vertical-align:middle;
+}
+.wrapper-411716 ul.sec5-list li p{
+  background:#fff;
+  width:100%;
+  display:inline-block;
+  box-sizing:border-box;
+  padding:20px 15px;
+  font-size:18px;
+  line-height:22px;
+}
+.wrapper-411716 ul.sec5-list li:first-child p{
+  padding:20px 60px;
+}
+
+.wrapper-411717 ul.sec5-list{
+  float:left;
+  width:100%;
+}
+.wrapper-411717 ul.sec5-list li{
+  background:url('../../../../assets/images/s5-md-bg.png') center top no-repeat;
+  text-align:center;
+  float:left;
+  display:inline-block;
+  width:316px;
+  height:470px;
+  margin:35px 27px 0 0;
+}
+.wrapper-411717 ul.sec5-list li:first-child(2){}
+.wrapper-411717 ul.sec5-list li:nth-child(3){margin:35px 0 0 0;}
+.md-logo{
+  padding:20px 0 0 0;
+  vertical-align:middle;
+}
+.wrapper-411717 ul.sec5-list li:nth-child(3) .md-logo{padding:10px 0 0 0;}
+.wrapper-411717 ul.sec5-list li p{
+  padding:20px 15px;
+  font-size:18px;
+  line-height:22px;
+}
+.md-img{
+  margin:15px auto 0;
+  display:block;
+}
+.wrapper-411717 ul.sec5-list li:nth-child(1) .md-img{margin:2px auto 0;}
 
 .vedio {
   width: 490px;
